--- a/Porgetto_Sad.Rmd
+++ b/Porgetto_Sad.Rmd
@@ -1065,8 +1065,8 @@ gli altri combustibili: elettricità, diesel o carburante normale.
 #### Grafico frequenze relative cumulative
 
 Le frequenze assolute cumulative sono il numero di osservazioni di una
-variabile che sono inferiori o uguali a un determinato valore
-In R, utilizziamo la funzione **`cumsum()`** per calcolare le frequenze
+variabile che sono inferiori o uguali a un determinato valore In R,
+utilizziamo la funzione **`cumsum()`** per calcolare le frequenze
 assolute cumulative di una variabile.
 
 ```{r}
@@ -1082,6 +1082,129 @@ uguale o inferiore a quello indicato sull'ascissa. Ad esempio, il primo
 segmento orizzontale del grafico rappresenta il numero di automobili con
 trasmissione "manual", mentre il secondo segmento orizzontale
 rappresenta il numero di automobili con trasmissione "manual" o "auto".
+
+### Distribuzioni delle frequenze relative marginali
+
+In R per calcolare la distribuzione delle frequenze relative congiunte
+si può utilizzare il comando prop.table(nomeTabella) e da questa
+ricavare le distribuzioni delle frequenze relative marginali.
+
+```{r}
+# Creazione del dataframe contente le due variabili categoriali fl e drv
+drv_fl <- table(mpg$fl,mpg$drv)
+
+# frequenze relative congiunte
+freq_drv_fl <- prop.table(drv_fl)
+
+# distribuzione delle frequenze relative marginali del tipo di carburante
+margin.table (freq_drv_fl, 1)
+
+# distribuzione delle frequneze relative marginali del tipo di trazione
+margin.table (freq_drv_fl, 2)
+
+```
+
+Conoscendo la distribuzione delle frequenze relative congiunte e la
+distribuzione delle frequenze relative marginali è possibile calcolare
+la distribuzione delle frequenze relative di Y (tipo di trazione)
+condizionata dalle modalità assunte da X (tipo di carburante) e
+viceversa.
+
+```{r}
+# distribuzione delle frequenze relative condizionate f(j/i)
+prop.table(freq_drv_fl, 1)
+
+# distribuzione delle frequenze relative condizionate f(i/j)
+prop.table(freq_drv_fl, 2)
+
+```
+
+Nel primo caso la somma degli elementi di ogni riga è unitaria; invece,
+nel secondo caso la somma degli elementi di ogni colonna è unitaria.
+
+Si dice che le variabili $X$ e $Y$ sono indipendenti se la frequenza
+relativa congiunta si fattorizza come il prodotto delle due frequenze
+relative marginali, ossia se risulta:
+
+$$f_{ij} = f_{i}.f_{j}$$ con
+
+$$(i=1,2,...,h;j=1,2,...,k).$$
+
+Questa circostanza si verifica molto raramente sui dati reali
+
+#### Grafici per le frequenze assolute congiunte
+
+Una tabella di contingenza può essere rappresentata mediante un grafico
+con rettangoli costituito da $h × k$ rettangoli. L\'area totale dei
+rettangoli è proporzionale al numero di casi. Il rettangolo in posizione
+$(i, j)$ rappresenta l\'elemento nella stessa posizione nella tabella di
+contingenza e la sua area rappresenta il peso relativo della coppia di
+modalità di $X$ e $Y$ all\'interno della distribuzione congiunta.
+
+In R, se si associa $table(X, Y)$ alla variabile $Z$, la
+rappresentazione tramite rettangoli di una tabella di contingenza si può
+realizzare con la funzione $plot(Z)$.
+
+```{r}
+plot(freq_drv_fl,col = "white", main = "Mosaic plot")
+```
+
+Si nota che sono presenti soltanto dodici rettangoli pieni e tre
+rettangoli vuoti corrispondenti alle coppie la cui frequenza è nulla.
+
+Talvolta è preferibile rappresentare la tabella di contingenza mediante
+un grafico a barre sovrapposte. Il numero di barre è pari al numero
+delle modalità delle colonne della tabella di contingenza. Inoltre,
+all\'interno di ciascuna barra sono rappresentate una sopra l\'altra in
+altezza le frequenze di ciascuna modalità delle righe della tabella di
+contingenza. Sull\'asse delle ordinate sono indicate le frequenze
+(assolute o relative).
+
+In R tale grafico può essere realizzato tramite la funzione barplot(Z).
+
+```{r}
+drv_fl_fl <- table(mpg$fl,mpg$drv)
+barplot(drv_fl_fl, main = "Frequenza assoluta congiunta", legend = c("Gasolio normale", "Diesel", "Elettricità", "Gasolio premium", "Gasolio regolare"), col = c("yellow","brown","black","red","green"))
+```
+
+#### Grafici per le frequenze assolute marginali
+
+Per ottenere il grafico della distribuzione marginale relativa al tipo
+di trazione basta utilizzare il comando seguente che produce il grafico
+a bastoncini.
+
+```{r}
+plot (margin.table(drv_fl, 2), main = " Frequenza assoluta marginale del tipo di trazione ", col =1:2)
+
+```
+
+che produce il grafico a bastoncini
+
+```{r}
+barplot(margin.table(drv_fl ,2), main = "Frequenza assoluta marginale del tipo di trazione", col = c(1:3)) 
+
+```
+
+#### Grafici per le frequenze relative condizionate
+
+Ѐ possibile rappresentare graficamente le *frequenze relative
+condizionate* utilizzando nuovamente la funzione barplot().
+
+Nel seguente grafico illustreremo la distribuzione delle frequenze
+relative condizionate del tipo di trazione fissato il tipo di carburante
+utilizzando un grafico a barre appaiate ottenuto tramite le seguenti
+linee di codice:
+
+```{r}
+barplot(prop.table(drv_fl_drv ,2), beside = TRUE, main = " Frequenza relativa condizionata f(tipo di trazione|tipo di carburante)", legend = c("Trazione integrale", "Trazione anteriroe", "Trazione posteriore"), col =c(1:3) )
+```
+
+abbiamo utilizzato l\'opzione *beside = TRUE* che permette di ottenere
+al posto di un grafico a barre sovrapposte un grafico a barre appaiate,
+ognuna delle quali indica la frequenza relativa condizionata
+dell\'ordinata nota l\'ascissa. Si nota che la somma delle frequenze
+relative condizionate relative alle ordinate è unitaria per ogni fissata
+modalità delle ascisse.
 
 ### Variabile Class
 
