--- a/Porgetto_Sad.Rmd
+++ b/Porgetto_Sad.Rmd
@@ -681,6 +681,42 @@ di carburante in città, in miglia per gallone
 Dal grafico vediamo che all'aumentare del numero di cilindri diminuisce
 il consumo di carburante in città.
 
+### Funzione di distribuzione empirica discreta
+
+La funzione di distribuzione empirica $F(x)$ è definita per ogni $x$
+reale ed è una funzione a gradini in cui ogni gradino indica quale
+proporzione di dati presenta un valore minore o uguale di quello
+indicato sull'asse delle ascisse.
+
+La funzione di distribuzione empirica $F(x)$ gode delle seguenti
+proprietà:
+
+\- è una funzione non decrescente;
+
+\- la funzione assume il valore a sinistra in corrispondenza ad ogni
+punto di salto;
+
+\- la funzione vale 0 per ogni valore minore dell'osservazione minima e
+vale 1 per ogni valore maggiore o uguale dell'osservazione massima.
+
+```{r}
+# Frequenze relative cumulative
+round(cumsum(table(mpg$displ)/length(mpg$displ)),3)
+
+```
+
+La funzione $ecdf()$ (empirical cumulative distribution function)
+permette di disegnare il grafico della funzione di distribuzione
+empirica per variabili quantitative discrete.
+
+```{r}
+plot(ecdf(mpg$displ),main=" Funzione di distribuzione empirica discreta ",verticals =FALSE ,col ="red ")
+
+```
+
+Se si utilizza l'opzione $verticals = TRUE$ i segmenti sono uniti da
+segmenti verticali.
+
 ### Variabile Year
 
 Year indica l'anno di produzione dell'automobile. Innanzitutto
@@ -931,6 +967,156 @@ Dall'istogramma possiamo osservare come si distribuisce la variabile, è
 evidente che la maggior parte dei veicoli percorrono tra i 10 e i 20
 miglia con un gallone.
 
+### Indici di sintesi
+
+Alcuni indici di sintesi, detti anche statistiche, utili a descrivere
+dei dati numerici, sono media, mediana, moda, varianza, deviazione
+standard e coefficiente di variazione. La media, la mediana e la moda
+sono misure di centralità, mentre la varianza e la deviazione standard
+misurano la dispersione dei dati.
+
+#### Media campionaria
+
+La media campionaria è la media aritmetica di questi valori.
+
+Definizione 4.1: Si definisce media campionaria e si denota con $x$, la
+quantità:
+
+$$\hat x = \frac1n \sum^n_{i=1}x_i$$
+
+La media campionaria è una media pesata dei valori distinti assunti dai
+dati. Ogni valore distinto usa come peso la sua frequenza relativa,
+ovvero la frazione dei dati uguale a tale valore numerico.
+
+```{r}
+mean(mpg$hwy)
+```
+
+La media campionaria utilizza tutti i dati ed è influenzata in maniera
+sensibile da valori eccezionalmente alti o bassi.
+
+#### Mediana Campionaria
+
+Assegnato un insieme di dati di ampiezza $n$, lo si ordini in ordine
+crescente (dal valore più piccolo al valore più grande). Se n è dispari,
+si definisce mediana campionaria il valore che è in posizione
+$(n +1)/2$, mentre se $n$ è pari la mediana campionaria è invece
+definita come la media aritmetica dei valori che occupano le posizioni
+$n/2$ e $n/2+ 1$.
+
+```{r}
+median(mpg$hwy)
+
+```
+
+La mediana campionaria dipende solo da uno o da due valori centrali dei
+dati e non risente dei valori estremi. Inoltre, l'uso della mediana come
+indice per descrivere le caratteristiche dei dati ha lo svantaggio di
+dover prima riordinare i dati in ordine crescente, il che non è
+richiesto per il calcolo della media.
+
+#### Moda campionaria
+
+La moda campionaria di un insieme di dati, se esiste, è la modalità a
+cui è associata la frequenza (assoluta o relativa) più elevata. Se
+esistono più modalità con frequenza massima, ciascuna di esse è detto
+valore modale.
+
+Non esiste invece in R una funzione per estrarre la moda o la classe
+modale di una distribuzione di dati poiché è facilmente ricavabile
+osservando il grafico delle frequenze assolute o l'istogramma delle
+frequenze relative.
+
+#### Quantili, percentili, decili e quartili
+
+-   I *quartili,* come dice la parola stessa, si ottengono dividendo
+    l'insieme di dati ordinati in 4 parti uguali. (quantili di ordine
+    1/4, 1/2, 3/4)
+
+-   I *percentili*, invece, dividendo la distribuzione in 100 parti
+    (quantili di ordine 1/100)
+
+-   I *decili,* infine, dividono la distribuzione in 10 parti uguali
+    (quantili di ordine 1/10).
+
+#### Varianza, deviazione standard e coefficiente di variazione
+
+Assegnato un insieme di dati numerici $x_1, x_2, . . . , x_n$, si
+definisce varianza campionaria, e si denota con $s^2$, la quantità:
+
+$$s^2 = \frac {1}{n-1} \sum^n_{i=1}(x_i - \hat x)^2$$
+
+con $$(n=2,3,...)$$
+
+```{r}
+var(mpg$hwy)
+
+```
+
+dove $$\hat x$$ denota la media campionaria dei dati. Inoltre, si
+definisce deviazione standard campionaria la radice quadrata della
+varianza campionaria.
+
+```{r}
+sd(mpg$hwy)
+
+```
+
+Varianza campionaria e deviazione standard campionaria sono detti indici
+di dispersione o indici di variabilità poiché misurano la dispersione
+dei dati intorno alla media.
+
+I valori della varianza campionaria e della deviazione standard
+campionaria dipendono dall'unità di misura dei dati.
+
+#### Coefficiente di variazione
+
+Per confrontare le variazioni esistenti tra diversi campioni di dati è
+utile introdurre coefficiente di variazione.
+
+Assegnato un insieme di dati numerici $x1, x2, . . . , xn$, si definisce
+coefficiente di variazione il rapporto tra la deviazione standard
+campionaria e il modulo della media campionaria, ossia:
+
+$$CV=\frac {s}{|\hat x|}$$
+
+Si nota che il coefficiente di variazione è un numero puro, ossia è un
+indice indice *adimensionale* che non dipende dall'unità di misura
+utilizzata.
+
+Il coefficiente di variazione è utilizzato quando è necessario
+confrontare tra loro le dispersioni (variabiltà) di insiemi di dati
+espressi in differenti unità di misura.
+
+In R si implementa nel seguente modo:
+
+```{r}
+cv <- function(x){
++ sd(x)/abs(mean(x))}
+
+cv(mpg$hwy)
+
+```
+
+#### Momenti campionari 
+
+Assegnato un insieme di dati numerici $x1, x2, . . . , xn$, si definisce
+momento campionario di ordine j e si denota con $M_j$ la quantità:
+
+$$M_j = \frac {1}{n} \sum^n_{i=1} x^j_i$$
+
+con $$(j=1,2,...)$$
+
+#### Momento centrato
+
+Assegnato un insieme di dati numerici $x1, x2, . . . , xn$, si definisce
+momento campionario centrato intorno alla media di ordine j e si denota
+con $m_j$ la quantità:
+
+$$
+m_j = \sum^n_{i=1} (x_i-\hat x)^j
+$$
+
 #### Scatterplot
 
 ```{r}
@@ -1061,6 +1247,64 @@ può percorrere su strada, con un gallone, diminuisce la cilindrata del
 motore, dunque più alta è la cilindrata e minori sono le miglia che il
 veicolo percorrerà con un gallone su strada.
 
+### Funzione di distribuzione empirica continua
+
+Per fenomeni quantitativi continui occorre considerare la funzione di
+distribuzione empirica continua, ossia una funzione di distribuzione
+empirica strutturata in classi.
+
+Come primo step creiamo le classi:
+
+```{r}
+
+# Frequenza relativa dei voti
+freqrel <- table(mpg$hwy)/length(mpg$hwy)
+
+# Lunghezza del vettore frequenza
+m <- length(freqrel)
+
+# Creazione delle classi
+classi <-c(15 ,18 ,21 ,24 ,27, 30, 33, 36, 39, 44)
+
+# Frequenze relative delle classi
+freqClassi <- table(cut(mpg$hwy, breaks = classi, right = FALSE))/length(mpg$hwy)
+
+# Frequenze cumulata
+Fcum <- cumsum(freqClassi)
+Fcum[9] <- 1
+
+```
+
+Per ottenere tali frequenze abbiamo utlizzato la funzione $cut()$ con
+l'opzione $right = FALSE$ che consente di costruire classi con
+intervalli chiusi a sinistra invece che a destra ed anche la funzione
+$cumsum()$ che permette di ottenere le frequenze cumulative.
+
+Ricordiamo che in R la funzione $cut()$ trasforma dati numerici in dati
+qualitativi mediante la loro collocazione in opportune classi sulla base
+di quanto specificato nel parametro breaks.
+
+Vogliamo ora scrivere delle linee di codice in R che consentono di
+ottenere il grafico della funzione di distribuzione empirica continua
+introducendo due classi fittizie $C_0 = (12, 15)$ e $C_5 = (44, 47)$ che
+ci serviranno per tracciare la linea $y = 0$ nell'intervallo *[12, 15)*
+e la linea $y = 1$ nell'intervallo *[44, 47)* nel grafico della funzione
+di distribuzione empirica continua.
+
+```{r}
+ascisse <-c(12, 15 ,18 ,21 ,24 ,27, 30, 33, 36, 39, 44, 47)
+ordinate <-c(0, 0, Fcum [1:9] ,1)
+plot(ascisse , ordinate , type = "b", axes = FALSE , main = "Funzione di distribuzione empirica continua ", col =" red ",ylim=c(0 ,1) ,xlab="x",ylab="F(x)")
+axis(1, ascisse )
+axis(2, format (Fcum , digits = 2))
+box()
+```
+
+Grafico della funzione di distribuzione empirica continua del vettore
+*hwy* utilizzando le classi:
+
+    [15,18)  [18,21)  [21,24)  [24,27)  [27,30)  [30,33) [33,36)  [36,39)  [39,44) 
+
 ### Variabile Fl
 
 La variabile fl del dataset mpg rappresenta il tipo di carburante
@@ -1093,8 +1337,8 @@ gli altri combustibili: elettricità, diesel o carburante normale.
 #### Grafico frequenze relative cumulative
 
 Le frequenze assolute cumulative sono il numero di osservazioni di una
-variabile che sono inferiori o uguali a un determinato valore
-In R, utilizziamo la funzione **`cumsum()`** per calcolare le frequenze
+variabile che sono inferiori o uguali a un determinato valore In R,
+utilizziamo la funzione **`cumsum()`** per calcolare le frequenze
 assolute cumulative di una variabile.
 
 ```{r}
@@ -1125,7 +1369,9 @@ pie ( perc , label = LabelF , col = rainbow ( length ( LabelF )), main = "Valori
 
 ### Distribuzioni delle frequenze relative marginali
 
-In R per calcolare la distribuzione delle frequenze relative congiunte si può utilizzare il comando prop.table(nomeTabella) e da questa ricavare le distribuzioni delle frequenze relative marginali.
+In R per calcolare la distribuzione delle frequenze relative congiunte
+si può utilizzare il comando prop.table(nomeTabella) e da questa
+ricavare le distribuzioni delle frequenze relative marginali.
 
 ```{r}
 # Creazione del dataframe contente le due variabili categoriali fl e drv
@@ -1142,7 +1388,11 @@ margin.table (freq_drv_fl, 2)
 
 ```
 
-Conoscendo la distribuzione delle frequenze relative congiunte e la distribuzione delle frequenze relative marginali è possibile calcolare la distribuzione delle frequenze relative di Y (tipo di trazione) condizionata dalle modalità assunte da X (tipo di carburante) e viceversa.
+Conoscendo la distribuzione delle frequenze relative congiunte e la
+distribuzione delle frequenze relative marginali è possibile calcolare
+la distribuzione delle frequenze relative di Y (tipo di trazione)
+condizionata dalle modalità assunte da X (tipo di carburante) e
+viceversa.
 
 ```{r}
 # distribuzione delle frequenze relative condizionate f(j/i)
@@ -1153,9 +1403,12 @@ prop.table(freq_drv_fl, 2)
 
 ```
 
-Nel primo caso la somma degli elementi di ogni riga è unitaria; invece, nel secondo caso la somma degli elementi di ogni colonna è unitaria.
+Nel primo caso la somma degli elementi di ogni riga è unitaria; invece,
+nel secondo caso la somma degli elementi di ogni colonna è unitaria.
 
-Si dice che le variabili $X$ e $Y$ sono indipendenti se la frequenza relativa congiunta si fattorizza come il prodotto delle due frequenze relative marginali, ossia se risulta:
+Si dice che le variabili $X$ e $Y$ sono indipendenti se la frequenza
+relativa congiunta si fattorizza come il prodotto delle due frequenze
+relative marginali, ossia se risulta:
 
 $$f_{ij} = f_{i}.f_{j}$$ con
 
@@ -1165,17 +1418,31 @@ Questa circostanza si verifica molto raramente sui dati reali
 
 #### Grafici per le frequenze assolute congiunte
 
-Una tabella di contingenza può essere rappresentata mediante un grafico con rettangoli costituito da $h × k$ rettangoli. L'area totale dei rettangoli è proporzionale al numero di casi. Il rettangolo in posizione $(i, j)$ rappresenta l'elemento nella stessa posizione nella tabella di contingenza e la sua area rappresenta il peso relativo della coppia di modalità di $X$ e $Y$ all'interno della distribuzione congiunta.
+Una tabella di contingenza può essere rappresentata mediante un grafico
+con rettangoli costituito da $h × k$ rettangoli. L'area totale dei
+rettangoli è proporzionale al numero di casi. Il rettangolo in posizione
+$(i, j)$ rappresenta l'elemento nella stessa posizione nella tabella di
+contingenza e la sua area rappresenta il peso relativo della coppia di
+modalità di $X$ e $Y$ all'interno della distribuzione congiunta.
 
-In R, se si associa $table(X, Y)$ alla variabile $Z$, la rappresentazione tramite rettangoli di una tabella di contingenza si può realizzare con la funzione $plot(Z)$.
+In R, se si associa $table(X, Y)$ alla variabile $Z$, la
+rappresentazione tramite rettangoli di una tabella di contingenza si può
+realizzare con la funzione $plot(Z)$.
 
 ```{r}
 plot(freq_drv_fl,col = "white", main = "Mosaic plot")
 ```
 
-Si nota che sono presenti soltanto dodici rettangoli pieni e tre rettangoli vuoti corrispondenti alle coppie la cui frequenza è nulla.
+Si nota che sono presenti soltanto dodici rettangoli pieni e tre
+rettangoli vuoti corrispondenti alle coppie la cui frequenza è nulla.
 
-Talvolta è preferibile rappresentare la tabella di contingenza mediante un grafico a barre sovrapposte. Il numero di barre è pari al numero delle modalità delle colonne della tabella di contingenza. Inoltre, all'interno di ciascuna barra sono rappresentate una sopra l'altra in altezza le frequenze di ciascuna modalità delle righe della tabella di contingenza. Sull'asse delle ordinate sono indicate le frequenze (assolute o relative).
+Talvolta è preferibile rappresentare la tabella di contingenza mediante
+un grafico a barre sovrapposte. Il numero di barre è pari al numero
+delle modalità delle colonne della tabella di contingenza. Inoltre,
+all'interno di ciascuna barra sono rappresentate una sopra l'altra in
+altezza le frequenze di ciascuna modalità delle righe della tabella di
+contingenza. Sull'asse delle ordinate sono indicate le frequenze
+(assolute o relative).
 
 In R tale grafico può essere realizzato tramite la funzione barplot(Z).
 
@@ -1186,7 +1453,9 @@ barplot(drv_fl_fl, main = "Frequenza assoluta congiunta", legend = c("Gasolio no
 
 #### Grafici per le frequenze assolute marginali
 
-Per ottenere il grafico della distribuzione marginale relativa al tipo di trazione basta utilizzare il comando seguente che produce il grafico a bastoncini.
+Per ottenere il grafico della distribuzione marginale relativa al tipo
+di trazione basta utilizzare il comando seguente che produce il grafico
+a bastoncini.
 
 ```{r}
 plot (margin.table(drv_fl, 2), main = " Frequenza assoluta marginale del tipo di trazione ", col =1:2)
@@ -1202,15 +1471,24 @@ barplot(margin.table(drv_fl ,2), main = "Frequenza assoluta marginale del tipo d
 
 #### Grafici per le frequenze relative condizionate
 
-Ѐ possibile rappresentare graficamente le *frequenze relative condizionate* utilizzando nuovamente la funzione barplot().
+Ѐ possibile rappresentare graficamente le *frequenze relative
+condizionate* utilizzando nuovamente la funzione barplot().
 
-Nel seguente grafico illustreremo la distribuzione delle frequenze relative condizionate del tipo di trazione fissato il tipo di carburante utilizzando un grafico a barre appaiate ottenuto tramite le seguenti linee di codice:
+Nel seguente grafico illustreremo la distribuzione delle frequenze
+relative condizionate del tipo di trazione fissato il tipo di carburante
+utilizzando un grafico a barre appaiate ottenuto tramite le seguenti
+linee di codice:
 
 ```{r}
 barplot(prop.table(drv_fl_drv ,2), beside = TRUE, main = " Frequenza relativa condizionata f(tipo di trazione|tipo di carburante)", legend = c("Trazione integrale", "Trazione anteriroe", "Trazione posteriore"), col =c(1:3) )
 ```
 
-abbiamo utilizzato l'opzione *beside = TRUE* che permette di ottenere al posto di un grafico a barre sovrapposte un grafico a barre appaiate, ognuna delle quali indica la frequenza relativa condizionata dell'ordinata nota l'ascissa. Si nota che la somma delle frequenze relative condizionate relative alle ordinate è unitaria per ogni fissata modalità delle ascisse.
+abbiamo utilizzato l'opzione *beside = TRUE* che permette di ottenere al
+posto di un grafico a barre sovrapposte un grafico a barre appaiate,
+ognuna delle quali indica la frequenza relativa condizionata
+dell'ordinata nota l'ascissa. Si nota che la somma delle frequenze
+relative condizionate relative alle ordinate è unitaria per ogni fissata
+modalità delle ascisse.
 
 ### Variabile Class
 
